--- a/POSWrapper/MainPage.xaml
+++ b/POSWrapper/MainPage.xaml
@@ -20,6 +20,7 @@
         <ScrollViewer Grid.Row="1" HorizontalAlignment="Stretch" VerticalScrollBarVisibility="Disabled">
             <Grid >
                 <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"></ColumnDefinition>
                     <ColumnDefinition Width="100"></ColumnDefinition>
                     <ColumnDefinition Width="10"></ColumnDefinition>
                     <ColumnDefinition Width="100"></ColumnDefinition>
@@ -27,13 +28,13 @@
                     <ColumnDefinition Width="100"></ColumnDefinition>
                     <ColumnDefinition Width="10"></ColumnDefinition>
                     <ColumnDefinition Width="100"></ColumnDefinition>
-                    <ColumnDefinition Width="10"></ColumnDefinition>
+                    <ColumnDefinition Width="*"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
 
-                <Button x:Name="btn_print" Click="btn_print_Click" Content="Print" Grid.Column="0" HorizontalAlignment="Stretch" />
-                <Button x:Name="btn_reset" Content="Reset" Grid.Column="2" Click="btn_reset_Click" HorizontalAlignment="Stretch" />
-                <Button x:Name="btn_clear" Content="Clear" Grid.Column="4" Click="btn_clear_Click" HorizontalAlignment="Stretch" />
-                <Button x:Name="btn_save" Content="Save" Grid.Column="6" Click="btn_save_Click" HorizontalAlignment="Stretch" />
+                <Button x:Name="btn_print" Click="btn_print_Click" Content="Print" Grid.Column="1" HorizontalAlignment="Stretch" />
+                <Button x:Name="btn_reset" Content="Reset" Grid.Column="3" Click="btn_reset_Click" HorizontalAlignment="Stretch" />
+                <Button x:Name="btn_clear" Content="Clear" Grid.Column="5" Click="btn_clear_Click" HorizontalAlignment="Stretch" />
+                <Button x:Name="btn_save" Content="Save" Grid.Column="7" Click="btn_save_Click" HorizontalAlignment="Stretch" />
             </Grid>
         </ScrollViewer>
     </Grid>
