--- a/POSWrapper/MainPage.xaml
+++ b/POSWrapper/MainPage.xaml
@@ -15,9 +15,9 @@
 
         <Rectangle Name="RectangleToPrint" Grid.Column="1"/>
         <WebView Grid.Column="1" x:Name="webView" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Source="ms-appx-web:///WebAssets/index.html" NavigationCompleted="webView_NavigationCompleted" ScriptNotify="webView_ScriptNotify"  />
-        
 
-        <ScrollViewer Grid.Row="0" HorizontalAlignment="Stretch" VerticalScrollBarVisibility="Disabled" Background="#333333;">
+
+        <ScrollViewer Grid.Row="0" HorizontalAlignment="Stretch" VerticalScrollBarVisibility="Disabled" Background="#AE51FF;">
             <Grid >
                 <Grid.RowDefinitions>
                     <RowDefinition Height="55"></RowDefinition>
