--- a/POSWrapper/CalcPage.xaml
+++ b/POSWrapper/CalcPage.xaml
@@ -19,6 +19,11 @@
                     <Button x:Name="btn_reg" Content="&#xE8FC;" FontFamily="Segoe MDL2 Assets" FontSize="28" Click="btn_reg_Click" Width="50" Height="50" Background="Transparent" RequestedTheme="Dark" />
                     <TextBlock Text="Register" FontSize="18" VerticalAlignment="Center" RequestedTheme="Dark" />
                 </StackPanel>
+
+                <StackPanel Orientation="Horizontal">
+                    <Button x:Name="btn_copy" Content="&#xE8C8;" FontFamily="Segoe MDL2 Assets" FontSize="28" Click="btn_copy_Click" Width="50" Height="50" Background="Transparent" RequestedTheme="Dark" />
+                    <TextBlock Text="Copy Tape" FontSize="18" VerticalAlignment="Center" RequestedTheme="Dark" />
+                </StackPanel>
             </StackPanel>
         </SplitView.Pane>
         <SplitView.Content>
@@ -32,42 +37,41 @@
                     <ColumnDefinition Width="*"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="*"></RowDefinition>
+                    <RowDefinition Height="50"/>
                     <RowDefinition Height="150"></RowDefinition>
                     <RowDefinition Height="150"></RowDefinition>
                     <RowDefinition Height="150"></RowDefinition>
                     <RowDefinition Height="150"></RowDefinition>
-
                     <RowDefinition Height="*"></RowDefinition>
                 </Grid.RowDefinitions>
 
-                <Button Click="btn_key_Click" Content="7" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Height="150" Width="150" FontSize="48"></Button>
-                <Button Click="btn_key_Click" Content="8" Grid.Row="1" Grid.Column="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Height="150" Width="150" FontSize="48"></Button>
-                <Button Click="btn_key_Click" Content="9" Grid.Row="1" Grid.Column="3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Height="150" Width="150" FontSize="48"></Button>
+                <Button Click="btn_key_Click" Content="7" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Height="145" Width="145" FontSize="48"></Button>
+                <Button Click="btn_key_Click" Content="8" Grid.Row="1" Grid.Column="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Height="145" Width="145" FontSize="48"></Button>
+                <Button Click="btn_key_Click" Content="9" Grid.Row="1" Grid.Column="3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Height="145" Width="145" FontSize="48"></Button>
 
-                <Button Click="btn_key_Click" Content="4" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Height="150" Width="150" FontSize="48"></Button>
-                <Button Click="btn_key_Click" Content="5" Grid.Row="2" Grid.Column="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Height="150" Width="150" FontSize="48"></Button>
-                <Button Click="btn_key_Click" Content="6" Grid.Row="2" Grid.Column="3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Height="150" Width="150" FontSize="48"></Button>
+                <Button Click="btn_key_Click" Content="4" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Height="145" Width="145" FontSize="48"></Button>
+                <Button Click="btn_key_Click" Content="5" Grid.Row="2" Grid.Column="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Height="145" Width="145" FontSize="48"></Button>
+                <Button Click="btn_key_Click" Content="6" Grid.Row="2" Grid.Column="3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Height="145" Width="145" FontSize="48"></Button>
 
-                <Button Click="btn_key_Click" Content="1" Grid.Row="3" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Height="150" Width="150" FontSize="48"></Button>
-                <Button Click="btn_key_Click" Content="2" Grid.Row="3" Grid.Column="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Height="150" Width="150" FontSize="48"></Button>
-                <Button Click="btn_key_Click" Content="3" Grid.Row="3" Grid.Column="3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Height="150" Width="150" FontSize="48"></Button>
+                <Button Click="btn_key_Click" Content="1" Grid.Row="3" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Height="145" Width="145" FontSize="48"></Button>
+                <Button Click="btn_key_Click" Content="2" Grid.Row="3" Grid.Column="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Height="145" Width="145" FontSize="48"></Button>
+                <Button Click="btn_key_Click" Content="3" Grid.Row="3" Grid.Column="3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Height="145" Width="145" FontSize="48"></Button>
 
-                <Button Click="btn_key_Click" Content="00" Grid.Row="4" Grid.Column="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Height="150" Width="150" FontSize="48"></Button>
-                <Button Click="btn_key_Click" Content="." Grid.Row="4" Grid.Column="3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Height="150" Width="150" FontSize="48"></Button>
-                <Button Click="btn_key_Click" Content="0" Grid.Row="4" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Height="150" Width="150" FontSize="48"></Button>
+                <Button Click="btn_key_Click" Content="00" Grid.Row="4" Grid.Column="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Height="145" Width="145" FontSize="48"></Button>
+                <Button Click="btn_key_Click" Content="." Grid.Row="4" Grid.Column="3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Height="145" Width="145" FontSize="48"></Button>
+                <Button Click="btn_key_Click" Content="0" Grid.Row="4" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Height="145" Width="145" FontSize="48"></Button>
 
-                <Button Click="btn_clear_Click" Content="*" Grid.Row="1" Grid.Column="4" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Height="150" Width="150" FontSize="48"></Button>
-                <Button Click="btn_minus_Click" Content="-=" Grid.Row="2" Grid.Column="4" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Height="150" Width="150" FontSize="48"></Button>
-                <Button Click="btn_plus_Click" Content="+=" Grid.Row="3" Grid.Column="4" Grid.RowSpan="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Height="300" Width="150" FontSize="48"></Button>
+                <Button Click="btn_clear_Click" Content="*" Grid.Row="1" Grid.Column="4" HorizontalAlignment="Right" VerticalAlignment="Stretch" Height="145" Width="135" FontSize="48"></Button>
+                <Button Click="btn_minus_Click" Content="-=" Grid.Row="2" Grid.Column="4" HorizontalAlignment="Right" VerticalAlignment="Stretch" Height="145" Width="135" FontSize="48"></Button>
+                <Button Click="btn_plus_Click" Content="+=" Grid.Row="3" Grid.Column="4" Grid.RowSpan="2" HorizontalAlignment="Right" VerticalAlignment="Stretch" Height="295" Width="135" FontSize="48"></Button>
 
                 <TextBox Grid.Row="1" Grid.Column="0" x:Name="txt_lcd" FontSize="65" HorizontalAlignment="Right" VerticalAlignment="Center" FontFamily="Consolas" Margin="0,0,33,0" Foreground="#FFAE51FF" Text="0" BorderThickness="0"></TextBox>
                 <ScrollViewer Grid.Row="2" Grid.Column="0" Grid.RowSpan="3" HorizontalAlignment="Left" Width="480" VerticalAlignment="Stretch" FontFamily="Consolas" FontSize="28" VerticalScrollBarVisibility="Visible" VerticalScrollMode="Enabled" HorizontalScrollMode="Disabled" >
                     <TextBlock x:Name="txt_tape" TextAlignment="Right"></TextBlock>
                 </ScrollViewer>
-                            
+
             </Grid>
-            
+
         </SplitView.Content>
     </SplitView>
 </Page>
