--- a/POSWrapper/MainPage.xaml
+++ b/POSWrapper/MainPage.xaml
@@ -23,18 +23,20 @@
                     <TextBlock Text="Reset" FontSize="18" VerticalAlignment="Center" RequestedTheme="Dark" />
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
+                    <Button x:Name="btn_cancel" Content="&#xE711;" FontFamily="Segoe MDL2 Assets" FontSize="28" Click="btn_reg_Click" Width="50" Height="50" Background="Transparent"  RequestedTheme="Dark" />
+                    <TextBlock Text="Clear" FontSize="18" VerticalAlignment="Center" RequestedTheme="Dark" />
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
                     <Button x:Name="btn_save" Content="&#xE74E;" FontFamily="Segoe MDL2 Assets" FontSize="28" Click="btn_save_Click" Width="50" Height="50" Background="Transparent"  RequestedTheme="Dark" />
                     <TextBlock Text="Save" FontSize="18" VerticalAlignment="Center" RequestedTheme="Dark" />
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
-                    <Button x:Name="btn_editsign" Content="&#xE1C2;" FontFamily="Segoe MDL2 Assets" FontSize="28" Click="btn_editsign_Click" Width="50" Height="50" Background="Transparent"  RequestedTheme="Dark" />
-                    <TextBlock Text="Edit Sign" FontSize="18" VerticalAlignment="Center" RequestedTheme="Dark" />
-                </StackPanel>
-
-                <StackPanel Orientation="Horizontal">
                     <Button x:Name="btn_reprint" Content="&#xE8A1;" FontFamily="Segoe MDL2 Assets" FontSize="28" Click="btn_reprint_Click" Width="50" Height="50" Background="Transparent"  RequestedTheme="Dark" />
                     <TextBlock Text="Reprint" FontSize="18" VerticalAlignment="Center" RequestedTheme="Dark" />
                 </StackPanel>
+
+                <Rectangle Height="2" HorizontalAlignment="Stretch" Stroke="White" ></Rectangle>
+                
                 <StackPanel Orientation="Horizontal">
                     <Button x:Name="btn_reg" Content="&#xE8FC;" FontFamily="Segoe MDL2 Assets" FontSize="28" Click="btn_reg_Click" Width="50" Height="50" Background="Transparent" RequestedTheme="Dark" />
                     <TextBlock Text="Register" FontSize="18" VerticalAlignment="Center" RequestedTheme="Dark" />
@@ -54,6 +56,13 @@
                 <StackPanel Orientation="Horizontal">
                     <Button x:Name="btn_calc" Content="&#xE8EF;" FontFamily="Segoe MDL2 Assets" FontSize="28" Click="btn_calc_Click" Width="50" Height="50" Background="Transparent" RequestedTheme="Dark" />
                     <TextBlock Text="Calculator" FontSize="18" VerticalAlignment="Center" RequestedTheme="Dark" />
+                </StackPanel>
+
+                <Rectangle Height="2" HorizontalAlignment="Stretch" Stroke="White" ></Rectangle>
+                
+                <StackPanel Orientation="Horizontal">
+                    <Button x:Name="btn_editsign" Content="&#xE1C2;" FontFamily="Segoe MDL2 Assets" FontSize="28" Click="btn_editsign_Click" Width="50" Height="50" Background="Transparent"  RequestedTheme="Dark" />
+                    <TextBlock Text="Edit Sign" FontSize="18" VerticalAlignment="Center" RequestedTheme="Dark" />
                 </StackPanel>
             </StackPanel>
         </SplitView.Pane>
